syntax = "proto3";
option java_package = "me.emiliomini.dutyschedule.datastore.prep.org";
option java_multiple_files = true;

message OrgItemsProto {
  repeated OrgProto orgs = 1;
}

message OrgProto {
  string guid = 1;
  string title = 2;
  string abbreviation = 3;
  string identifier = 4;
}